--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: app
-    restart: unless-stopped
-    tty: true
+      target: php
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
@@ -18,6 +15,9 @@ services:
       - ./storage:/var/www/storage
     networks:
       - app-network
+    depends_on:
+      - database
+      - redis
 
   webserver:
     image: nginx:alpine
@@ -33,6 +33,36 @@ services:
     networks:
       - app-network
 
+  database:
+    image: mysql:5.7.22
+    restart: unless-stopped
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: laravel
+      MYSQL_ROOT_PASSWORD: laravel
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+    volumes:
+      - dbdata:/var/lib/mysql/
+    networks:
+      - app-network
+
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+    command: redis-server --requirepass laravel
+
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  dbdata:
+    driver: local
